# goit-pythonweb-hw-10

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/versions/: 950bbb364743_add_user.py  abaa11ea0b69_init.py  bf3f53b76b03_add_to_model_user_filed_confirmed.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
